--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,15 @@
 ---
 title: "About"
+listing:
+  contents: posts
+  sort: date-desc
 image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
     - icon: github
       text: Github
       href: https://github.com
 ---
 
-About this blog named *goodrock*
+About this blog named *goodrock* having *listing of posts.*
