--- a/posts/memo_verse/index.qmd
+++ b/posts/memo_verse/index.qmd
@@ -3,6 +3,7 @@ title: "memo_verse"
 author: "granPiero" 
 date: "2024-12-28"
 categories: [bible]
+image: "brain.jpg"
 format: 
   html:
     comments:
