--- a/posts/memo_verse/index.qmd
+++ b/posts/memo_verse/index.qmd
@@ -13,6 +13,8 @@ format:
 
 > This is *on-your-device-only-persistent-memory* of **bible references,** that you accumulate on the fly. *However one distinct memory zone per browser*
 
+TODO: use cachedMap althrough
+
 ::: {#mainAnchor}
 :::
 
