--- a/posts/memo_verse_dev/index.qmd
+++ b/posts/memo_verse_dev/index.qmd
@@ -11,6 +11,9 @@ format:
         repo: "fischerpj/ynot"
 ---
 
-> This is *on-your-device-only-persistent-memory* of **bible references,** that you accumulate on the fly. *However one distinct memory zone per browser*
+> This is *on-your-device-only-persistent-memory* of **bible references,** that you accumulate on the fly. *However one distinct memory zone per browser* TODO: use cachedMap althrough
+
+::: {#mainAnchor}
+:::
 
 <script src="rapid_ui.js"></script>
