--- a/posts/mapStorage/index.qmd
+++ b/posts/mapStorage/index.qmd
@@ -6,11 +6,11 @@ categories: [bible]
 image: "brain.jpg"
 ---
 
-> Now based on mvc2.js and class Refs instead of mapStorage.
+> Now based on fast_mvc.js rather than mvc2.js and class Refs instead of mapStorage.
 >
 > format: html: comments: utterances: repo: "fischerpj/ynot"
 
 ::: {#mainAnchor}
 :::
 
-<script src="mvc2.js"></script>
+<script src="fast_mvc.js"></script>
