--- a/posts/verseWorker/index.qmd
+++ b/posts/verseWorker/index.qmd
@@ -1,12 +1,12 @@
 ---
 title: "verseWorker"
 author: "granPiero" 
-date: "2025-01-23"
+date: "2025-04-01"
 categories: [bible]
 image: "brain.jpg"
 ---
 
-> Now based on mvc_worker.js instead of mapStorage.
+>   MEMORIZE on the fly your **bible references** in one persistent sandbox per browser and domain. Cloudflare WORKER API targeted by *mvc_worker.js*. cf '[https://bg_worker.pjafischer.workers.dev/bgw/search'](https://bg_worker.pjafischer.workers.dev/bgw/search').
 
 ::: {#mainAnchor}
 :::
